# Industrial-Cost-Intelligence

./: .env.example  .gitignore  Makefile  README.md  STRUCTURE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
agents/: pyproject.toml
agents/cost_optimizer/: __init__.py  api.py  constraint_engine.py  dashboard.py  explainability.py  models.py  monitoring.py  multi_objective.py  optimization_engine.py  search_space.py  tradeoff_engine.py
agents/cost_twin/: __init__.py  api.py  causal_graph.py  dashboard.py  dependency_model.py  models.py  monitoring.py  optimization_engine.py  scenario_planning.py  simulation_engine.py
agents/decision_engine/: __init__.py  api.py  confidence_engine.py  dashboard.py  decision_graph.py  explainability.py  models.py  monitoring.py  optimization_engine.py  recommendation_engine.py
agents/factory_twin/: __init__.py  api.py  dashboard.py  event_engine.py  factory_graph.py  models.py  monitoring.py  optimization.py  scheduling.py  simulation_model.py
agents/knowledge_graph/: __init__.py  api.py  cypher_queries.py  embeddings.py  events.py  graph_model.py  models.py  monitoring.py  neo4j_schema.py  recommendations.py  search.py  taxonomy.py
agents/market_monitor/: __init__.py  alert_engine.py  api.py  commodity_tracker.py  dashboard.py  data_sources.py  events.py  forecasting.py  fx_engine.py  indicators.py  inflation_engine.py  models.py  shock_detection.py
agents/negotiation/: __init__.py  api.py  counter_proposal.py  events.py  historical_model.py  human_approval.py  models.py  monitoring.py  multi_agent.py  price_elasticity.py  risk_controls.py  strategy.py  supplier_behavior.py
agents/procurement_twin/: __init__.py  api.py  dashboard.py  event_simulation.py  models.py  monitoring.py  monte_carlo.py  risk_propagation.py  scenario_engine.py  simulation_engine.py
agents/rfq_agent/: agent.py  config.py  main.py
agents/rfq_agent/communication/: email_sender.py  response_monitor.py
agents/rfq_agent/database/: models.py  repository.py
agents/rfq_agent/discovery/: supplier_finder.py  supplier_scraper.py
agents/rfq_agent/events/: publisher.py
agents/rfq_agent/generation/: email_templates.py  rfq_generator.py
agents/rfq_agent/parsing/: normalizer.py  response_parser.py
agents/rfq_agent/safety/: anti_spam.py  compliance.py  rate_limiter.py
agents/rfq_agent/tests/: test_agent_loop.py  test_email_templates.py  test_parsing.py  test_safety.py
agents/rfq_agent/tools/: registry.py
agents/world_model/: __init__.py  api.py  causal_graph.py  dashboard.py  forecasting.py  knowledge_graph.py  models.py  monitoring.py  optimization.py  scenario_planning.py  simulation.py
backend/: .dockerignore  alembic.ini  ici_test.db  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/src/: config.py  database.py  dependencies.py  exceptions.py  logging_config.py  main.py
backend/src/middleware/: auth.py  observability.py
backend/src/modules/costs/api/: routes.py  schemas.py
backend/src/modules/costs/application/: services.py
backend/src/modules/costs/domain/: exceptions.py  models.py
backend/src/modules/costs/infrastructure/: orm.py  (+1 more)
backend/src/observability/: __init__.py  incident_detector.py  logging.py  metrics.py  middleware.py  tracing.py
backend/src/security/: __init__.py  abac.py  api_hardening.py  audit.py  auth.py  encryption.py  rbac.py  secrets.py
backend/tests/: conftest.py  test_materials.py  test_risk.py  test_search.py
ml/: .dockerignore  mlflow.db  pyproject.toml
ml/cost_prediction/: config.py
ml/cost_prediction/drift/: detector.py
ml/cost_prediction/evaluation/: metrics.py  report.py
ml/cost_prediction/features/: geometry_features.py  material_features.py  pipeline.py  process_features.py  supplier_features.py
ml/cost_prediction/inference/: api.py  predictor.py  schemas.py
ml/cost_prediction/models/: generate_dummy_models.py
ml/cost_prediction/registry/: model_registry.py
ml/cost_prediction/retraining/: scheduler.py
ml/cost_prediction/tests/: test_drift.py  test_features.py  test_inference.py  test_metrics.py
ml/cost_prediction/training/: trainer.py
(+208 files in other folders)
