[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ici-rfq-agent"
version = "1.0.0"
description = "ICI Autonomous RFQ Agent"
requires-python = ">=3.11"
dependencies = [
    # LLM
    "anthropic>=0.28.0",
    # Web framework / server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    # Config / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # HTTP client
    "httpx>=0.27.0",
    # Redis
    "redis>=5.0.0",
    # Web scraping
    "playwright>=1.45.0",
    # Serialisation
    "orjson>=3.10.0",
    # Logging
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "anyio>=4.4.0",
]

[project.scripts]
rfq-agent = "rfq_agent.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["rfq_agent/tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["rfq_agent"]
