[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ici-backend"
version = "1.0.0"
description = "Industrial Cost Intelligence Platform — Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "orjson>=3.10.0",
    # Search / vector
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "redis[asyncio]>=5.0.0",
    "pgvector>=0.3.0",
    "qdrant-client>=1.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "factory-boy>=3.3.0",
    "faker>=25.3.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "sqlalchemy-utils>=0.41.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src", "tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
