[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ici-cost-prediction"
version = "1.0.0"
description = "ICI Manufacturing Cost Prediction ML Pipeline"
requires-python = ">=3.11"
dependencies = [
    # Core ML
    "lightgbm>=4.3.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.13.0",
    # MLflow
    "mlflow>=2.13.0",
    # HPO
    "optuna>=3.6.0",
    # Serving
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "orjson>=3.10.0",
    # Observability
    "prometheus-client>=0.20.0",
    "structlog>=24.2.0",
    # Explainability (optional but imported lazily)
    "shap>=0.45.0",
    # Plotting
    "matplotlib>=3.9.0",
    # Scheduling
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
cost-predict-train  = "cost_prediction.training.trainer:main"
cost-predict-serve  = "cost_prediction.inference.api:serve"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["cost_prediction/tests"]
addopts = "-v --tb=short --cov=cost_prediction --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["cost_prediction"]
